@@ -1,3 +1,8 @@
+2004-12-13  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* gst-tool.c: put error = NULL in some gconf calls, we're not caring
+	about the error here.
+
 2004-12-01  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* gst-filter.c (gst_filter_check_ip_address): handled NULL strings
